# PPOIS2

Lab1/src/: README.md  card_state.json  main.py  pyproject.toml
Lab1/src/cli/: app_cli.py
Lab1/src/core/: enum.py  exceptions.py
Lab1/src/domain/: bank.py  bank_card.py  card_limits.py  card_owner.py  transaction.py
Lab1/src/factories/: card_factory.py
Lab2/: README.md  docker-compose.yml  pyproject.toml
Lab2/src/: main.py
Lab3/: README.md  pyproject.toml
Lab3/src/crimsoland/: __init__.py  __main__.py  app.py  config_loader.py  events.py  main.py  resource_manager.py  settings.py  state_manager.py  ui_text.py  utils.py
Lab3/src/crimsoland.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
Lab3/src/crimsoland/data/: highscores.json
Lab3/src/crimsoland/data/configs/: audio.json  enemies.json  game.json  player.json  waves.json  weapons.json
Lab3/src/crimsoland/entities/: __init__.py  bullet.py  enemy.py  player.py  weapon.py
Lab3/src/crimsoland/screens/: __init__.py  game_over_screen.py  game_screen.py  help_screen.py  menu_screen.py  name_input_screen.py  scores_screen.py
Lab3/src/crimsoland/systems/: __init__.py  animation_system.py  audio_system.py  collision_system.py  combat_system.py  score_system.py  wave_system.py
Lab3/tests/: conftest.py  test_app_smoke.py  test_audio_assets.py  test_bullet.py  test_collision_system.py  test_config_loader.py  test_enemy.py  test_player.py  test_score_system.py  test_screens.py  test_state_manager.py  test_systems_misc.py  test_wave_system.py  test_weapon.py
(+30 files in other folders)
