[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crimsoland"
version = "0.1.0"
description = "Учебная 2D-игра в стиле Crimsonland-like top-down shooter на pygame."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pygame>=2.5,<3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<7.0",
]

[project.scripts]
crimsoland = "crimsoland.main:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
crimsoland = [
    "data/highscores.json",
    "data/configs/*.json",
    "data/assets/audio/*.wav",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=crimsoland --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["src/crimsoland"]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 2
